# indy-switch

./: .clangd  .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  build.sh  check.sh  sdkconfig
components/indy_common/: CMakeLists.txt  indy_button.cc  indy_button.h  indy_config.cc  indy_config.h  indy_json.cc  indy_json.h  indy_mdns.cc  indy_mdns.h  indy_mqtt.cc  indy_mqtt.h  indy_nvs.cc  indy_nvs.h  indy_output_pin.cc  indy_output_pin.h  indy_task.cc  indy_task.h  indy_task_manager.cc  indy_task_manager.h  indy_time.cc  indy_time.h  indy_util.cc  indy_util.h  indy_wifi.cc  indy_wifi.h
components/indy_switch/: CMakeLists.txt  indy_scheduler.cc  indy_scheduler.h  indy_switch.cc  indy_switch.h
main/: CMakeLists.txt  initial_config.json  main.cc
